@@ -4,23 +4,20 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import kr.hhplus.be.server.domain.coupon.dto.IssueCouponRequest;
 import kr.hhplus.be.server.domain.coupon.dto.UserCouponResponse;
-import kr.hhplus.be.server.domain.coupon.service.CouponFacade;
+import kr.hhplus.be.server.domain.coupon.facade.CouponFacade;
 import kr.hhplus.be.server.domain.coupon.vo.UserCouponVo;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/coupon")
 @Tag(name = "Coupon", description = "쿠폰 API")
+@RequiredArgsConstructor
 public class CouponController {
     private final CouponFacade couponFacade;
-
-    public CouponController(CouponFacade couponFacade) {
-        this.couponFacade = couponFacade;
-    }
 
     @PostMapping()
     @Operation(summary = "쿠폰 발급", description = "사용자가 쿠폰을 발급받습니다.")
@@ -39,6 +36,6 @@ public class CouponController {
         List<UserCouponVo> userCouponList = couponFacade.getUserCoupons(userId);
         return ResponseEntity.ok(userCouponList.stream()
                 .map(UserCouponVo::toResponse)
-                .collect(Collectors.toList()));
+                .toList());
     }
 }
